# YOLO-manga-bubble-detector

./: .gitignore  MANIFEST.in  README.md  bubble_detector_model.ipynb  build-requirements.txt  data.yaml  data_balanced.yaml  main.py  model_inferences.ipynb  pyproject.toml  requirements.txt
build_env/: pyvenv.cfg
build_env/Scripts/: activate  activate.bat
manga_bubble_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models/run1/: args.yaml  results.csv
models/train1/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  events.out.tfevents.1744911141.AN515-58.16684.0  results.csv
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml  events.out.tfevents.1744914178.AN515-58.16452.0  results.csv
runs/detect/train8/: args.yaml  events.out.tfevents.1744914619.AN515-58.26336.0  results.csv
scripts/: infer.py  prepare_dataset.py  repair_images.py  split_dataset.py  train.py  visualize_predictions.py
yolo_detector/: __init__.py  data_utils.py  inference.py  postprocessing.py  training.py
