[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-bubble-detector"
version = "1.0.0"
description = "A YOLOv8-based detector for manga speech bubbles and text boxes"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Ebhon", email = "handwitanto@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "albumentations>=2.0.5",
    "numpy>=1.20.0",
    "PyYAML>=6.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.65.0"
]

[project.urls]
Homepage = "https://github.com/handw/YOLO-manga-bubble-detector"
Repository = "https://github.com/handw/YOLO-manga-bubble-detector.git"

[project.scripts]
manga-detector = "main:main"

[tool.setuptools]
packages = ["yolo_detector", "scripts"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 